# kit

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/pegs/: assets.rs  constants.rs  main.rs  types.rs  update.rs  utils.rs
examples/pegs/draw/: debug.rs  gui.rs  pegs.rs  tiles.rs
examples/pegs/update/: phase_reset.rs
src/: geometry.rs  graphics.rs  input.rs  lib.rs  math.rs
src/graphics/: circle.rs  line.frag.glsl  line.fs.metal  line.rs  line.vert.glsl  mesh.rs  model.rs  point.frag.glsl  point.rs  point.vert.glsl  point.vs.metal  quad.frag.glsl  quad.fs.metal  quad.rs  quad.vert.glsl  quad.vs.metal  rect.rs  sprite.rs  test.frag.glsl  test.vert.glsl
