[package]
authors = ["Wes Hardee"]
categories = ["game-engines"]
description = "An small game engine for 3D games."
edition = "2018"
exclude = [
  ".vscode/*",
]
homepage = "https://github.com/weshardee/kit"
keywords = ["graphics", "3D", "game", "engine"]
license = "MIT"
name = "kit"
readme = "README.md"
repository = "https://github.com/weshardee/kit"
version = "0.0.3"

[dependencies]
image = "0.23"
rand = "0.7"
sokol = "0.3"
