[package]
authors = ["Wes Hardee"]
categories = ["game-engines"]
description = "An small game engine for 3D games."
edition = "2018"
exclude = [
  ".vscode/*",
  "examples",
]
homepage = "https://github.com/weshardee/kit"
keywords = ["graphics", "3D", "game", "engine"]
license = "MIT"
name = "kit"
readme = "README.md"
repository = "https://github.com/weshardee/kit"
version = "0.1.0"

[dependencies]
glam = "0.9"
image = {version = "0.23", default-features = false, features = ["png"]}
rand = "0.7"
sokol = "0.3"
